--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,24 @@ button {
   line-height: 1.3;
   word-spacing: 4px;
 }
+@media screen and (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .box1 p {
+    font-size: 13px;
+    text-align: start;
+    text-wrap: wrap;
+  }
+  .box {
+    width: 500px;
+  }
+  .box1 p {
+    width: auto;
+  }
+}
